<resources>
    <string name="app_name">Registration Assignment1</string>
    <string name="please_enter_your_details">Please Enter Your Details</string>
    <string name="name">Name :</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="birth_date">Birth Date :</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="email_id">Email Id :</string>
    <string name="enter_your_email_id">Enter Your Email Id</string>
    <string name="register">Register</string>
    <string name="welcome_user">Welcome User !</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="your_details_are_submitted_successfully">Your Details are submitted Successfully !</string>
    <string name="name1">name1</string>
    <string name="birthdate1">birthdate1</string>
    <string name="email_id1">email_id1</string>
</resources>